@@ -5,8 +5,5 @@ Manner-Server
 
 * App Server: Tomcat 7.0.54 (Servlet 3.x)
 * Database: Mongo DB 2.6
-* JDK: JDK 1.7
+* JDK: Java SE 1.8
 * Maven: Maven 3.1.1
-
-
-Tomcat7 VM options: -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m
